Create SignUp form page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,29 @@
 
 <body>
     <div class="container">
-        <h1 class="container--header">Sign Up</h1>
+        <div>
+            <h1>Sign Up</h1>
+            <p>You need an account to get started</p>
+        </div>
+        <form action="">
+            <div>
+                <small>Username</small><br>
+                <input type="text" placeholder="Enter your username" name="name" required>
+            </div>
+            <div>
+                <small>Email Address</small><br>
+                <input type="email" placeholder="Enter valid e-mail address" name="mail" required>
+            </div>
+            <div>
+                <small>Password</small><br>
+                <input type="password" placeholder="********" name="password" required>
+            </div>
+            <div>
+                <small>Confirm Password</small><br>
+                <input type="password" placeholder="********" name="password" required>
+            </div>
+            <button type="submit">CREATE ACCOUNT</button>
+        </form>
     </div>
 </body>
 
